--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
